--- a/frontend/assets/css/index.css
+++ b/frontend/assets/css/index.css
@@ -100,7 +100,7 @@ h1 {
 
 .card h3 {
   color: #152a38;
-  font-size: 24px;
+  font-size: 25px;
   font-weight: bold;
   text-align: center;
 }
@@ -117,17 +117,19 @@ h1 {
 }
 
 .visuallyHidden {
-  position: absolute; 
-  overflow: hidden; 
-  clip: rect(0 0 0 0); 
-  height: 1px; width: 1px; 
-  margin: -1px; padding: 0; border: 0; 
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
 }
-
 
 /* HAMBURGER  */
 .hamburger {
-  margin: 0 auto;  
+  margin: 0 auto;
   width: 30px;
   height: 30px;
   position: relative;
@@ -141,7 +143,7 @@ h1 {
   display: block;
   border-radius: 4px;
   transition: all 0.4s ease-in-out;
-  position: absolute; 
+  position: absolute;
 }
 
 .bar1 {
@@ -161,11 +163,10 @@ h1 {
   bottom: 0;
 }
 
-
-.checkbox:checked + label > .hamburger1 > .bar1{
+.checkbox:checked + label > .hamburger1 > .bar1 {
   transform: rotate(45deg);
   transform-origin: 5%;
-  width: 41px
+  width: 41px;
 }
 
 .checkbox:checked + label > .hamburger1 > .bar2 {
@@ -186,7 +187,7 @@ h1 {
 
 /* Media querys */
 
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   #container_items {
     display: none;
   }
@@ -198,19 +199,85 @@ h1 {
     display: flex;
     align-items: center;
     margin-right: 14px;
-  } 
+  }
 
   #container_menu:hover {
     transform: scale(1.1);
     cursor: pointer;
     transition: 0.5s;
-  } 
+  }
 
   .logo img {
     width: 100px;
-    height: 70px;    
+    height: 70px;
   }
-  
+
+  .container {
+    padding: 50px 40px;
+  }
+  .content {
+    flex-direction: column;
+  }
+
+  .content img {
+    width: 300px;
+    height: 300px;
+  }
+
+  .header {
+    font-size: 30px;
+  }
+
+  .container_cards {
+    flex-direction: column;
+    padding: 50px 20px;
+    align-items: center;
+  }
+
+  .card {
+    width: 300px;
+    height: 420px;
+    margin: 40px 0;
+  }
+  .card h3 {
+    font-size: 20px;
+    margin: 0px;
+  }
+  .card p {
+    font-size: 14px;
+  }
 }
 
-
+@media (min-width: 820px) and (max-width: 1300px) {
+  .navbar {
+    padding: 15px 30px;
+    display: flex;
+  }
+  .container {
+    padding: 50px 100px;
+  }
+  .content {
+    flex-direction: column;
+  }
+  .content img {
+    width: 400px;
+    height: 400px;
+  }
+  .header {
+    font-size: 35px;
+  }
+  .container_cards {    
+    padding: 50px 20px;
+    flex-direction: column;
+    align-items: center;
+  } 
+  .card {
+    width: 470px;
+    height: 440px;
+    margin: 40px 0;
+  }
+  .card h3 {
+    font-size: 22px;
+    margin: 0px;
+  }
+}
